<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@color/colorWhite"
    android:paddingBottom="10dp"
    android:layout_height="match_parent">
    <TextView
        style="@style/ToTalVat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/chubb"/>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/count_per_month" />
            <TextView
                android:id="@+id/sec4_count_per_month"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/per_month_total_vat"/>
            <TextView
                android:id="@+id/sec4_per_month_total_vat"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/count_increase" />
            <EditText
                android:id="@+id/sec4_edit_increase"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal" />
            <TextView
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/life_increase" />
            <TextView
                android:id="@+id/sec4_increase"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <View
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <View
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/sum"
                android:textColor="@color/colorBlue"/>

            <TextView
                android:layout_weight="1"
                android:id="@+id/sec4_total"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:textColor="@color/colorBlue"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>