<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        style="@style/ToTalVat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/chubb_life"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp">
        <LinearLayout
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            <TextView
                android:id="@+id/sec5_price"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:ignore="NestedWeights" />
            <TextView
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/price"/>
        </LinearLayout>
        <LinearLayout
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            <TextView
                android:id="@+id/sec5_per_month_total_vat"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:ignore="NestedWeights" />
            <TextView
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/per_month_total_vat"/>
        </LinearLayout>
        <LinearLayout
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            <TextView
                android:id="@+id/sec5_increase"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:ignore="NestedWeights" />
            <TextView
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/increase"/>
        </LinearLayout>
        <LinearLayout
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            <TextView
                android:id="@+id/sec5_month"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:ignore="NestedWeights" />
            <TextView
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/month"/>
        </LinearLayout>
        <LinearLayout
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            <TextView
                android:id="@+id/sec5_total_price"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:ignore="NestedWeights" />
            <TextView
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/total_price"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>