<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:paddingBottom="10dp"
    android:background="@color/colorWhite"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        style="@style/ToTalVat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pay_section2"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp">
        <TextView
            android:layout_weight="1"
            android:id="@+id/sec2_price"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
        <TextView
            android:layout_weight="1.25"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/minus"/>
        <LinearLayout
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_weight="1"
                android:id="@+id/sec2_edit_cover"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:inputType="number"/>
            <TextView
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/cover"/>
        </LinearLayout>
        <TextView
            android:layout_weight="1.25"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/minus"/>
        <LinearLayout
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_weight="1"
                android:id="@+id/sec2_edit_transfer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:enabled="false"/>
            <TextView
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/transfer"/>
        </LinearLayout>
        <TextView
            android:gravity="center"
            android:layout_weight="1.25"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/equal"/>
        <TextView
            android:layout_weight="1"
            android:id="@+id/total_sec2"
            android:gravity="center"
            android:textColor="@color/colorBlue"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

</LinearLayout>